* Some improvements in interactive editing, particularly in lifting out
  definitions and proof search.
* Moved System.Interactive, along with getArgs to the Prelude.
* Major improvements to reflected elaboration scripts, including the ability to run
  them in a declaration context and many bug fixes.
* "decl syntax" rules to allow syntax extensions at the declaration level

New in 0.9.18:
--------------
* GHC 7.10 compatibility
* Add support for bundled toolchains.
* Strings are now UTF8 encoded in the default back end
* Idris source files are now assumed to be in UTF8, regardless of locale
  settings.
* Some reorganisation of primitives:
  + Buffer and BitVector primitives have been removed (they were not
    tested sufficiently, and lack a maintainer)
  + Float has been renamed 'Double' (Float is defined in the Prelude for
    compatibility)
  + Externally defined primitives and  operations now supported with
    '%extern' directive, allowing back ends to define their own special
    purpose primitives
  + Ptr and ManagedPtr have been removed and replaced with external primitives
* Add %hint function annotation, which allows functions to be used as
  hints in proof search for 'auto' arguments. Only functions which return
  an instance of a data or record type are allowed as hints.
* Syntax rules no longer perform variable capture. Users of effects will
  need to explicitly name results in dependent effect signatures instead
  of using the default name "result".
* Pattern-matching lambdas are allowed to be impossible. For example,
  Dec (2 = 3) can now be constructed with No $ \(Refl) impossible, instead of
  requiring a separate lemma.
* Case alternatives are allowed to be impossible:
  case Vect.Nil {a=Nat} of { (x::xs) impossible ; [] => True }
* The default Semigroup and Monoid instances for Maybe are now prioritised
  choice, keeping the first success as Alternative does. The version that
  collects successes is now a named instance.